doploy-helm.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: deploy-helm
  namespace: jobs-cron   
  labels:
    app: test
spec: 
  replicas: 2
  selector: 
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test     
    spec:
      containers:
      - name: testing
        image: bitbull/webserver
        ports:
        - containerPort: 80
