diploy1-ingres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ingre1
  namespace: ingress-nginx
  labels:
    app: ingre1 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingre1
  template:
    metadata:
      labels:
        app: ingre1
    spec:
      containers:
      - name: container
        image: bitbull/webserver
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: servicei
  namespace: ingress-nginx
spec:
  selector:
    app: ingre1
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 
      nodePort:
